[tool.poetry]
name = "microservice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "2.3.3"
confluent-kafka = "^2.8.0"
websockets = "^15.0"
dateparser = "^1.2.1"
pinotdb = "^5.6.0"
streamlit = "^1.42.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

